# sinir-aglari-proje

./: .env.example  .gitignore  PROGRESS.md  README.md  pyproject.toml
src/annrag/: __init__.py  __main__.py  _cli.py  config.py  logging_setup.py
src/annrag/groundtruth/: __init__.py  curate.py  fetch.py  generate.py  models.py  stats.py  storage.py
src/annrag/llm/: __init__.py  anthropic_client.py  base.py  factory.py  ollama_client.py
src/annrag/rag/: chunking.py  embedder.py  index.py  loader.py  metrics.py  models.py  pipeline.py  ragas_eval.py
tests/: conftest.py  test_cli.py  test_config.py  test_logging_setup.py
tests/groundtruth/: test_curate.py  test_fetch.py  test_generate.py  test_models.py  test_stats.py  test_storage.py
tests/llm/: test_anthropic_client.py  test_factory.py  test_ollama_client.py
tests/rag/: test_chunking.py  test_index.py  test_metrics.py  test_pipeline.py
