[project]
name = "annrag"
version = "0.1.0"
description = "Wikivoyage RAG travel-guide chatbot — Neural Networks coursework with retrieval/RAGAS eval."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Kaan Karaman" }]
license = { text = "MIT" }

dependencies = [
    "anthropic>=0.100.0",
    "faiss-cpu>=1.13.2",
    "httpx>=0.28.1",
    "ollama>=0.6.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "ragas==0.1.21",
    "tiktoken>=0.13.0",
    "typer>=0.25.1",
]

[project.scripts]
annrag = "annrag._cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/annrag"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "SIM", # simplify
    "RUF",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=annrag --cov-report=term-missing"
filterwarnings = ["error"]

[tool.coverage.run]
source = ["src/annrag"]
branch = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "ty>=0.0.35",
]
